# idleGame

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  buyables.cpp  buyables.h  game.cpp  game.h  main.cpp
.github/workflows/: Build-multiplat.yml
include/: Buyables.h  DisplayUtils.h  Game.h  InputMonitor.h  Settings.h  buyables.h  game.h  settings.h
src/: Buyables.cpp  Game.cpp  InputMonitor.cpp  Settings.cpp  buyables.cpp  debug.cpp  game.cpp  main.cpp
